navbox border spacing bugfix

--- a/.less/Templates.less
+++ b/.less/Templates.less
@@ -65,6 +65,7 @@ blockquote.block {
     .navbox-list,
     .navbox-group {
         border: 2px solid @main-page-bg;
+        border-top: 0;
     }
     
     .navbox-subgroup {
